--- a/slideshare.html
+++ b/slideshare.html
@@ -52,13 +52,12 @@
   
 <div id="screen">
 	<div  id="content" class="frame" style="height: 800px; filter:url(#contrast) url(#brightness) url(#colorfill);">
-	<center><a href="https://freebitco.in/?r=102321&Frindesfavs" target="_blank"><img class ="thumbs" src="banners/freebitcoin728x90-3.webp" width="728" height="90" border="0" alt="Earn Bitcoin" title="Earn Bitcoin" align="center" /></a></center>
 		<!-- MENU  -->
 		<div id="menu">
 			<ul>
 				<!-- HOME  -->
 				<li>
-					<a href="FrindesFavs-Rollercoin.html">&nbsp;&nbsp;&nbsp;&nbsp;Home</a>
+					<li><a href="https://frindestown.duckdns.org/">&nbsp;&nbsp;Frindestown Home</a></li>
 				</li>
 				<!-- TOC  -->
 				<li>
