--- a/videomator.html
+++ b/videomator.html
@@ -78,7 +78,7 @@
 	<div id="menu">
 	<ul>
 	<!-- HOME  -->
-		<li><a href="FrindesFavs-Rollercoin.html">&nbsp;&nbsp;&nbsp;&nbsp;Home</a></li>
+		<li><a href="https://frindestown.duckdns.org/">&nbsp;&nbsp;Frindestown Home</a></li>
 	<!-- TOC  -->
 		<li><a href="index.html">Index</a></li>
 	<!-- MISC  -->
